# rusty_genes

./: Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
src/: algorithms.rs  evolution.rs  individual.rs  lib.rs  model.rs  operators.rs  population.rs  stats.rs
src/algorithms/: aga.rs  ga.rs
src/operators/: crossover.rs  mutation.rs  selection.rs
